@@ -35,6 +35,8 @@ version 0.9.2 - Not released, available at https://simupop.svn.sourceforge.net/s
 		class.
   - CHG: Remove jump and jumpIfFalse from parameter specification.
   - CHG: Replace --noDialog with --gui=False (and allow for values such as Tkinter).
+  - CHG: Polish operator splitSubPop, replace which to subPops, and add the feature
+		to split subpopulations by information field.
 		
 
 version 0.9.1 - (Rev 2330) Jan 13, 2009
